Set loader size in css to prevent flicker

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -18,6 +18,10 @@ canvas {
   justify-content: center;
   align-items: center;
   border: 4px solid black;
+  width: 600px;
+  height: 600px;
+  max-width: calc(100vw - 50px);
+  max-height: calc(100vw - 50px);
 }
 
 .color-button-container {
